livrables_kubernetes_exam_Nicolas_WIBART/YAML-STANDARD/fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: fastapi:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: shared-data
              mountPath: /app/shared
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: fastapi-shared-pvc-rwx
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-svc
spec:
  selector:
    app: fastapi
  ports:
    - port: 80
      targetPort: 5000
  type: NodePort
