livrables_kubernetes_exam_Nicolas_WIBART/YAML-STANDARD/20-ingress-fastapi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
spec:
  rules:
    - host: app.nicolas-ingress.abrdns.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-svc
                port:
                  number: 80
